[package]
name = "polkadot-node-core-approval-voting"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
futures = "0.3.21"
futures-timer = "3.0.2"
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["bit-vec", "derive"] }
gum = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0", package = "tracing-gum" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
lru = "0.9"
merlin = "2.0"
schnorrkel = "0.9.1"
kvdb = "0.13.0"
derive_more = "0.99.17"
thiserror = "1.0.31"

polkadot-node-subsystem = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }
polkadot-node-jaeger = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }

sc-keystore = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, features = ["full_crypto"] , branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }

[dev-dependencies]
async-trait = "0.1.57"
parking_lot = "0.12.0"
rand_core = "0.5.1" #                                                                       should match schnorrkel
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
polkadot-node-subsystem-test-helpers = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }
assert_matches = "1.4.0"
kvdb-memorydb = "0.13.0"
test-helpers = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0", package = "polkadot-primitives-test-helpers" }
