[package]
name = "polkadot-node-core-approval-voting"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
futures-timer = { workspace = true }
parity-scale-codec = { workspace = true, default-features = false, features = ["bit-vec", "derive"] }
gum = { workspace = true }
bitvec = { workspace = true, default-features = false, features = ["alloc"] }
lru = { workspace = true }
merlin = { workspace = true }
schnorrkel = { workspace = true }
kvdb = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }

polkadot-node-subsystem = { workspace = true }
polkadot-node-subsystem-util = { workspace = true }
polkadot-overseer = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-node-primitives = { workspace = true }
polkadot-node-jaeger = { workspace = true }

sc-keystore = { workspace = true, default-features = false }
sp-consensus = { workspace = true, default-features = false }
sp-consensus-slots = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false, features = ["full_crypto"] }
sp-runtime = { workspace = true, default-features = false }

[dev-dependencies]
async-trait = "0.1.57"
parking_lot = "0.12.0"
rand_core = "0.5.1" #                                                                       should match schnorrkel
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
polkadot-node-subsystem-test-helpers = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }
assert_matches = "1.4.0"
kvdb-memorydb = "0.13.0"
test-helpers = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0", package = "polkadot-primitives-test-helpers" }
