[package]
name = "pallet-dex-contracts-api"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
fp-evm = { workspace = true }
frame-support = { workspace = true }
pallet-evm = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }


[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "alloy-sol-types/std",
    "pallet-evm/std",
    "fp-evm/std",
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
