[package]
name = "energy-generation-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
energy-generation-runtime-api = { workspace = true }
parity-scale-codec = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
sp-runtime = { workspace = true, default-features = false }
sp-blockchain = { workspace = true }
sp-std = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
pallet-reputation = { workspace = true, default-features = false }