[package]
name = "energy-generation-rpc"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
energy-generation-runtime-api = { workspace = true }
parity-scale-codec = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros", "client"] }
sp-runtime = { workspace = true, default-features = false }
sp-blockchain = { workspace = true }
sp-std = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
pallet-reputation = { workspace = true, default-features = false }